--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,7 @@ header .nav-right img{
 }
 
 .section-5{
-    height: 100vh; 
+    /* height: 100vh;  */
     position: relative; 
     padding: 40px;
 }
@@ -487,7 +487,7 @@ header .nav-right img{
 
     .section-5{
         position: relative;
-        height: 360px;
+        /* height: 360px; */
     }
     .section-5 .pengurus .pengurus-title h4{
         font-size: 13px;
